cambios en package.json - scripts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "MercadoLiebre",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+ 
   "keywords": [
     "mercadoliebre"
   ],
